<resources>
    <string name="app_name">Shadman_Hossain_MyRuns5</string>
    <string name="Profile">Profile</string>
    <string name="name">Name</string>
    <string name="insert_user_name_here">Insert User Name Here</string>
    <string name="email">Email</string>
    <string name="insert_email_here">Insert Email Here</string>
    <string name="phone_number">Phone Number</string>
    <string name="insert_phone_number_here">Insert Phone Number Here</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Other">Other</string>
    <string name="major">Major</string>
    <string name="insert_major_here">Insert Major Here</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="take_picture">Take Picture</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="gender">Gender</string>
    <string name="class_title">Class</string>
    <string name="insert_class_here">Insert Class Year Here</string>
    <string name="input_type">Input Type:</string>
    <string name="activity_type">Activity Type</string>
    <string name="start">START</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="calories">Calories</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="comment">Comment</string>
    <string-array name="input_type_choices">
        <item>Manual</item>
        <item>GPS</item>
        <item>Automatic</item>
    </string-array>
    <string-array name="activity_type_choices">
        <item>Running</item>
        <item>Walking</item>
        <item>Standing</item>
        <item>Cycling</item>
        <item>Hiking</item>
        <item>Downhill Skiing</item>
        <item>Cross-Country Skiing</item>
        <item>Snowboarding</item>
        <item>Skating</item>
        <item>Swimming</item>
        <item>Mountain Biking</item>
        <item>Wheelchair</item>
        <item>Elliptical</item>
        <item>Other</item>

    </string-array>
    <string name="map">Map</string>
    <string-array name="unit_preference_entries">
        <item>Metric (Kilometers)</item>
        <item>Imperial (Miles)</item>
    </string-array>

    <string-array name="unit_preference_values">
        <item>km</item>
        <item>miles</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="account_preference_header">Account Preference</string>
    <string name="additional_settings_header">Additional Settings</string>
    <string name="misc_header">Misc.</string>

    <!-- Profile Setting Titles -->
    <string name="profile_settings_title">Profile Settings</string>
    <string name="profile_settings_summary">Profile Photo, Name, Email, Etc</string>
    
    <!-- Privacy Setting Titles -->
    <string name="privacy_setting_title">Privacy Setting</string>
    <string name="privacy_setting_summary">Posting records anonymously</string>

    <!-- Unit Setting Title-->
    <string name="unit_preference_title">Unit Preference</string>
    <string name="unit_preference_summary">Select the units</string>

    <!-- Comment Setting Title -->
    <string name="comment_preference_title">Comments</string>
    <string name="comment_preference_summary">Please enter your comments</string>

    <!-- Webpage Title -->
    <string name="webpage_title">Webpage</string>
    <string name="webpage_url">https://www.sfu.ca/computing.html</string>

    <string name="select_profile_image">Select Profile Picture</string>
    <string name="date_and_time">Date and Time</string>
    <string name="delete">Delete</string>
    <string name="grant_permission_message">Need permission to access GPS coordinates. Please go to mobile settings and allow permission for this app</string>

</resources>