<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/Profile"
        android:textColor="@color/blue"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/profileScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/profileTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/black"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileTitle" >

            <TextView
                android:id="@+id/userProfileTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/profile_photo"
                android:textColor="@color/blue" />


            <ImageView
                android:id="@+id/ProfilePhoto"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/changeProfilePictureButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:layout_marginTop="8dp"
                />

            <TextView
                android:id="@+id/userNameTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/name"
                android:textColor="@color/blue" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@color/white"
                android:hint="@string/insert_user_name_here"
                android:inputType="textPersonName"
                android:textColor="@color/blue"
                android:textColorHint="@color/blue"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/userEmailTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/email"
                android:textColor="@color/blue" />

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@color/white"
                android:hint="@string/insert_email_here"
                android:inputType="textEmailAddress"
                android:textColor="@color/blue"
                android:textColorHint="@color/blue"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/userPhoneNumberTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/phone_number"
                android:textColor="@color/blue" />

            <EditText
                android:id="@+id/userPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@color/white"
                android:hint="@string/insert_phone_number_here"
                android:inputType="phone"
                android:textColor="@color/blue"
                android:textColorHint="@color/blue"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/userGenderTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/gender"
                android:textColor="@color/blue" />

            <RadioGroup
                android:id="@+id/genderButtonRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"

                >

                <RadioButton
                    android:id="@+id/maleGenderButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Male"
                    android:textColor="@color/blue" />

                <RadioButton
                    android:id="@+id/femaleGenderButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Female"
                    android:textColor="@color/blue" />

                <RadioButton
                    android:id="@+id/otherGenderButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Other"
                    android:textColor="@color/blue" />
            </RadioGroup>

            <TextView
                android:id="@+id/userClassTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/class_title"
                android:textColor="@color/blue" />

            <EditText
                android:id="@+id/userClass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@color/white"
                android:hint="@string/insert_class_here"
                android:inputType="text"
                android:textColor="@color/blue"
                android:textColorHint="@color/blue"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/userMajorTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/major"
                android:textColor="@color/blue" />

            <EditText
                android:id="@+id/userMajor"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@color/white"
                android:hint="@string/insert_major_here"
                android:inputType="text"
                android:textColor="@color/blue"
                android:textColorHint="@color/blue"
                android:textSize="12sp" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_marginTop="8dp"/>

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_marginTop="8dp"
                />
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>